# strata

./: .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  SECURITY.md  docker-compose.observability.yml  docker-compose.yml  fly.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  setup.sh  start.sh
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  docker.yml  docs.yml  examples.yml  integration.yml  jupyter-corpus.yml  pre-commit.yml  release.yml  scorecard.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/changelog/: index.html
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/changelog/: index.html
0.3.0/: 404.html  index.html  sitemap.xml
0.3.0/changelog/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/changelog/: index.html
0.5.0/: 404.html  index.html  sitemap.xml
0.5.0/changelog/: index.html
0.5.0/search/: search_index.json
benchmarks/: bench_restart.py  capacity_sweep.py  prod_sim_local.py  soak_test.py  stress_test.py
changelog/: index.html
deployment/codespaces/: index.html
deployment/docker/: index.html
deployment/fly/: index.html
deployment/lifecycle/: index.html
deployment/modes/: index.html
deployment/observability/: index.html
deployment/privacy/: index.html
deployment/service-mode/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/changelog/: index.html
dev/search/: search_index.json
docs/: changelog.md  index.md
docs/core/: registry.md
docs/deployment/: codespaces.md  docker.md  fly.md  lifecycle.md  modes.md  observability.md  privacy.md  service-mode.md
docs/getting-started/: core.md  installation.md  notebook.md
docs/notebook/: agent-authoring.md  ai.md  annotations.md  cells.md  cli.md  comparison.md  concepts.md  environment.md  examples.md  export.md  import.md  keyboard.md  lake-aware-cells.md  mcp.md  registry-dashboard.md  secrets.md  testing.md  tui.md  workers.md
docs/reference/: configuration.md  executor-protocol.md  notebook-protocol.md  notebook-toml.md  rest-api.md  websocket.md
docs_hooks/: export_examples.py
examples/: 01_basic_usage.py  02_column_projection.py  03_filtering.py  04_time_travel.py  05_duckdb_integration.py  06_cache_management.py  07_error_handling.py  08_polars_integration.py  09_s3_storage.py  10_artifacts.py  11_async_client.py  12_delibera_integration.py  README.md  hello_world.py  setup_demo.py
examples/arxiv_classifier/: MODAL_DEPLOY.md  README.md  index.html  modal_gpu_worker.py  pyproject.toml
examples/data_viewer/: README.md  notebook.toml  pyproject.toml
examples/data_viewer/cells/: generate.py  ranked.py
examples/iris_classification/: README.md  index.html  notebook.toml  pyproject.toml
examples/library_cells/: index.html  pyproject.toml
examples/loop_hill_climb/: README.md  index.html  notebook.toml
examples/markdown_showcase/: index.html  pyproject.toml
examples/model_variants/: README.md  index.html  notebook.toml  pyproject.toml
examples/model_variants/cells/: confusion.py  evaluate.py  load_data.py  train_gbm.py  train_logreg.py  train_rf.py  train_test.py  variants_intro.md
examples/model_variants_sweep/: .gitignore  README.md  notebook.toml  pyproject.toml
examples/news_alpha_trader/: index.html  notebook.toml  pyproject.toml
examples/pandas_basics/: README.md  index.html  pyproject.toml
examples/pixel-dynamics-lab/: pyproject.toml
examples/r_lm_vs_sklearn/: README.md  index.html  notebook.toml  pyproject.toml
examples/r_lm_vs_sklearn/cells/: build_data.py  compare.py  fit_lm.r  fit_sklearn.py
examples/r_mtcars_analysis/: README.md  index.html  notebook.toml  pyproject.toml
examples/r_mtcars_analysis/cells/: diagnostics.r  fit_model.r  plot_mpg.r  prep_data.r  summarise.r
examples/review_triage/: index.html  pyproject.toml
examples/s3_mount/: README.md  index.html  pyproject.toml
examples/sql_orders_report/: README.md  index.html  pyproject.toml
examples/test_notebook/: pyproject.toml
examples/titanic_ml/: README.md  index.html  notebook.toml  pyproject.toml
examples/tui-images/: notebook.toml  pyproject.toml
examples/widget_playground/: README.md  notebook.toml  pyproject.toml
examples/widget_playground/cells/: controls.widget  plot.py  preview.py
experiments/ml-dogfood-taxi/: .gitignore  README.md  append_month2.py  friction-log.md  setup_warehouse.py  taxi_schema.py
experiments/ml-dogfood-taxi/pipeline/: notebook.toml  pyproject.toml
experiments/ml-dogfood-taxi/pipeline/cells/: evaluate.py  promote.py  scan.py  train.py
frontend/: package-lock.json  package.json
frontend/scripts/: embed-smoke.mjs
frontend/src/: router.ts
getting-started/core/: index.html
getting-started/installation/: index.html
getting-started/notebook/: index.html
notebook/ai/: index.html
notebook/annotations/: index.html
notebook/cells/: index.html
rust/: Cargo.toml
rust/src/: lib.rs
search/: search_index.json
tests/: conftest.py  test_api_dependencies.py  test_arrow_integration.py  test_artifact_cli.py  test_artifact_service.py  test_artifact_store.py  test_artifact_uris.py  test_artifacts_integration.py  test_async_client.py  test_auth.py  test_blob_store.py  test_build_qos.py  test_build_service.py  test_cache_metrics.py  test_cache_router.py  test_circuit_breaker.py  test_client_imports.py  test_client_unit.py  test_config_loading.py  test_datafusion_integration.py  test_deployment_mode.py  test_duckdb_ext.py  test_e2e_artifacts.py  test_executor_protocol.py  test_fast_io.py  test_filters.py  test_filters_conformance.py  test_frame_ancestors.py  test_hardening.py  test_lineage.py  test_logs_api.py  test_materialize_service.py  test_multitenancy.py  test_observability.py  test_observability_dashboard.py  test_pandas_integration.py  test_parallel_fetch.py  test_polars_ext.py  test_prefetch.py  test_pull_model.py  (+23 more)
(+622 files in other folders)
