[project]
name = "strata-notebook"
version = "0.2.0"
description = "A content-addressed computation graph with an interactive notebook UI"
readme = "README.md"
authors = [
    { name = "Fangchen Li", email = "fangchen.li@outlook.com" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["iceberg", "arrow", "cache", "analytics", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
]
dependencies = [
    "strata-client", # the slim client lives in its own distribution (packages/strata-client)
    "pyiceberg[sql-sqlite,sql-postgres]>=0.8.0",
    "pyarrow>=18.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.28.0",
    "duckdb>=1.1.0",
    "python-multipart>=0.0.9", # Required for executor multipart form handling
    "pydantic>=2.0.0", # For configuration validation
    "pydantic-settings>=2.0.0", # For configuration with env var support
    "tomli_w>=1.0.0", # For writing TOML files
    "jsonschema>=4.0.0",
    "infisicalsdk>=1.0.16",
    "packaging>=24.0",
    "filelock>=3.16.0", # Cross-process renv mutual exclusion (issue #102)
]

[project.optional-dependencies]
# OpenTelemetry for distributed tracing
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]
# Azure Blob Storage support
azure = [
    "azure-storage-blob>=12.20.0",
    "azure-identity>=1.15.0",
]
# Strata Notebook runtime — DataFrame / Series / ndarray
# serialization, display outputs (figures, images), and the
# cloudpickle-backed object codec used for cell output values.
# Strata core doesn't need any of these; install this extra only if
# you use the notebook server or workers.
# Notebook cell execution runtime: harness + pool_worker + serializer.
# orjson is used for manifest I/O in the harness/pool_worker subprocesses.
# cloudpickle is the default object codec for cell outputs.
notebook = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "orjson>=3.10.0",
    "cloudpickle>=3.0.0",
    "matplotlib>=3.8.0",
    "Pillow>=10.0.0",
]
# SQL cells: query parsing + ADBC connection management. Per-driver
# packages live in their own extras so users only install what they
# actually connect to.
sql = [
    "sqlglot>=25.0.0",
    "adbc-driver-manager>=1.0.0",
]
sql-postgres = [
    "adbc-driver-postgresql>=1.0.0",
]
sql-sqlite = [
    "adbc-driver-sqlite>=1.0.0",
]
sql-snowflake = [
    "adbc-driver-snowflake>=1.0.0",
]
sql-bigquery = [
    "adbc-driver-bigquery>=1.0.0",
]
sql-duckdb = [
    "duckdb>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.0",
    "moto[s3]>=5.0.0",
    "boto3>=1.35.0",
    "psutil>=5.9.0",
    "testcontainers[minio]>=4.0.0",
    "polars>=1.36.1",
    "pandas>=2.3.3",
    "datafusion>=50.1.0",
    "ty>=0.0.24",
    "s3fs>=2026.3.0",
    "adlfs>=2026.0.0",
    "gcsfs>=2026.0.0",
    "sqlglot>=25.0.0",
    "adbc-driver-manager>=1.0.0",
    "adbc-driver-postgresql>=1.0.0",
    "adbc-driver-sqlite>=1.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mike>=2.1.0",
]

[project.scripts]
strata = "strata.cli:main"
strata-notebook = "strata.server:main"
strata-worker = "strata.notebook.remote_executor:main"

[project.urls]
Homepage = "https://bearing-research.github.io/strata/"
Documentation = "https://bearing-research.github.io/strata/"
Repository = "https://github.com/bearing-research/strata"
Issues = "https://github.com/bearing-research/strata/issues"
Changelog = "https://github.com/bearing-research/strata/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
python-preference = "only-managed"

# The slim client is a workspace member built as its own distribution
# (strata-client). In dev it's installed editable from packages/strata-client;
# the published strata-notebook wheel depends on the published strata-client.
[tool.uv.workspace]
members = ["packages/strata-client"]

[tool.uv.sources]
strata-client = { workspace = true }

# Maturin configuration for building the Rust extension
# Build with: maturin develop (dev) or maturin build (release)
[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "strata._strata_core"
features = ["pyo3/extension-module"]
# python-source picks up .py files automatically, but the
# bundled-frontend SPA is non-Python and needs explicit
# inclusion. Release CI copies frontend/dist/ to
# src/strata/_frontend/ before building.
include = [
    { path = "src/strata/_frontend/**/*", format = ["sdist", "wheel"] },
    # Maturin's sdist is built via ``cargo package`` rooted at
    # ``rust/`` and doesn't pick up files from the repo root by
    # default. Without these, the sdist's PEP 639 ``License-File:
    # LICENSE`` metadata points at a file the archive doesn't
    # contain, and PyPI rejects the upload with HTTP 400.
    { path = "LICENSE", format = ["sdist"] },
    { path = "README.md", format = ["sdist"] },
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["examples/", "experiments/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"
python = ".venv"

[tool.ty.rules]
# Optional deps (Rust ext, ADBC drivers) use guarded imports
unresolved-import = "warn"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
    "warm_pool: marks tests that require live warm worker startup",
]

# Coverage is opt-in: pass ``--cov`` (or ``--cov=strata --cov-report=html``)
# to enable it. Default test runs stay fast for tight inner-loop iteration.
# Configuration below applies whenever coverage is collected.
[tool.coverage.run]
source_pkgs = ["strata"]
branch = true
# Coverage data files get a per-process suffix so we can later combine
# them via ``coverage combine`` once subprocess coverage is wired in
# (Phase 4 — see project memory). Harmless when subprocess coverage is
# disabled; ``coverage combine`` is a no-op on a single data file.
parallel = false
omit = [
    # Rust extension: imported, never executed from Python.
    "*/strata/_strata_core/*",
    # Re-export shims that exist purely to keep imports stable.
    "*/strata/__init__.py",
]

[tool.coverage.report]
# ``exclude_also`` keeps coverage.py's built-in defaults
# (``pragma: no cover``, ``def __repr__``, ``raise NotImplementedError``, …)
# instead of overwriting them.
exclude_also = [
    "if TYPE_CHECKING:",
    "if typing\\.TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    # Optional-import branches use the same shape repo-wide; ty already
    # flags these as guarded so coverage shouldn't penalize the
    # never-installed leg.
    "except ImportError:",
    "except ModuleNotFoundError:",
]
show_missing = true
skip_covered = false
precision = 1

[tool.coverage.html]
directory = "htmlcov"
