[package]
name = "strata_core"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust acceleration for Strata's data plane"

[lib]
name = "strata_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py312"] }
arrow = { version = "58", features = ["ipc"] }
memmap2 = "0.9"
thiserror = "2.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
