[project]
name = "data-viewer"
version = "0.1.0"
description = "Interactive DataFrame viewer — paging + sort over a large frame"
requires-python = "==3.12.*"
dependencies = [
    "pyarrow>=18.0.0",
    "orjson>=3.10.0",
    "cloudpickle>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
]

[tool.uv]
