[project]
name = "model-variants"
version = "0.1.0"
description = "Compare three classifiers via @variant cells over the same iris pipeline"
requires-python = "==3.12.*"
dependencies = [
    "pyarrow>=18.0.0",
    "orjson>=3.10.0",
    "cloudpickle>=3.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[tool.uv]
